--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,21 @@
-// Configure PSScriptAnalyzer settings
 {
-    "[powershell]": {
-        "editor.formatOnSave": true
-    },
-    "powershell.scriptAnalysis.settingsPath": "PSScriptAnalyzerSettings.psd1",
-    "powershell.codeFormatting.preset": "OTBS",
-    "powershell.codeFormatting.alignPropertyValuePairs": true,
-    "powershell.codeFormatting.ignoreOneLineBlock": true,
     "json.schemas": [
         {
-            "url": "https://raw.githubusercontent.com/ScoopInstaller/Scoop/master/schema.json",
+            "url": "https://abgox.github.io/schema/Scoop/zh-CN/manifest-min.json",
             "fileMatch": [
-                "bucket/**/*.json"
+                "bucket/**/*.json",
+                "deprecated/**/*.json"
             ]
         }
     ],
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/tmp": true
+    "editor.formatOnSave": true,
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[markdown]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
