Optimized Formatting Configuration and VSCode Extension Recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
     "recommendations": [
-        "esbenp.prettier-vscode"
+        "EditorConfig.EditorConfig",
+        "esbenp.prettier-vscode",
+        "ms-vscode.PowerShell"
     ]
 }
