--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -1,17 +1,18 @@
 on:
-  workflow_dispatch:
-  schedule:
-    # run every 4 hours
-    - cron: '20 */4 * * *'
+    workflow_dispatch:
+    schedule:
+        # Run at UTC time 2:30, 6:30, 10:30, 14:30, 18:30, 22:30
+        # Corresponds to 10:30, 14:30, 18:30, 22:30, 02:30, 06:30 in China timezone (UTC+8)
+        - cron: "30 2,6,10,14,18,22 * * *"
 name: Excavator
 jobs:
-  excavate:
-    name: Excavate
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@main
-      - name: Excavate
-        uses: ScoopInstaller/GithubActions@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SKIP_UPDATED: 1
+    excavate:
+        name: Excavate
+        runs-on: windows-latest
+        steps:
+            - uses: actions/checkout@main
+            - name: Excavate
+              uses: ScoopInstaller/GithubActions@main
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  SKIP_UPDATED: 1
