--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -3,7 +3,7 @@ on:
     schedule:
         # Run at UTC time 2:30, 6:30, 10:30, 14:30, 18:30, 22:30
         # Corresponds to 10:30, 14:30, 18:30, 22:30, 02:30, 06:30 in China timezone (UTC+8)
-        - cron: "30 2,6,10,14,18,22 * * *"
+        - cron: "30 2/4 * * *"
 name: Excavator
 jobs:
     excavate:
